# gaia

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  client.py  config.py  exceptions.py  gaia.py  gaiaEngine.py  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  stop.sh
.github/workflows/: python-package.yml  qc.yml  test.yml
docs/: adding_hardware.md  architecture.md  hardware_supported.md  structure.md
engine/: __init__.py  caches_manager.py  climate.py  config.py  config_parser.py  hardware_library.py  health.py  light.py  sensors.py  sensors_library.py  subroutine_template.py  utils.py
migrations/: env.py  script.py.mako
migrations/versions/: 5b748c447b29_287_init.py  e6f6bac2aac8_286_actuator_groups.py
scripts/: gen_profile.sh  gen_pyproject.sh  gen_service.sh  install.sh  logging.sh  start.sh  stop.sh  update.sh
scripts/utils/: gen_profile.sh  gen_pyproject.sh  logging.sh  sandbox.sh
src/: __init__.py  client.py  config_parser.py  ecosystem.py  engine.py  exceptions.py  manager.py  shared_resources.py  utils.py  virtual.py
src/database/: __init__.py  models.py  routines.py  wrapper.py
src/events/: __init__.py  dispatcher.py  socketio.py
src/gaia/: __init__.py  __main__.py  actuator_handler.py  array_utils.py  cli.py  ecosystem.py  engine.py  events.py  exceptions.py  helpers.py  main.py  shared_resources.py  types.py  utils.py  virtual.py
src/gaia/config/: __init__.py  _utils.py  base.py  default_actuators.py  defaults.py  environments.py  from_files.py
src/gaia/database/: __init__.py  models.py  routines.py  wrapper.py
src/gaia/dependencies/: __init__.py  camera.py  database.py  dispatcher.py
src/gaia/events/: __init__.py  dispatcher_based_handler.py  events.py  sio_based_handler.py
src/gaia/hardware/: GPIO_sensors.py  I2C_sensors.py  __init__.py  _compatibility.py  _websocket.py  abc.py  actuators.py  camera.py  multiplexers.py  utils.py  virtual.py  virtual_sensors.py
src/gaia/hardware/actuators/: GPIO.py  __init__.py  virtual.py  websocket.py
src/gaia/hardware/camera/: __init__.py
src/gaia/hardware/camera/_devices/: _compatibility.py
src/gaia/hardware/multiplexers/: __init__.py
src/gaia/hardware/multiplexers/_devices/: _compatibility.py
src/gaia/hardware/sensors/: GPIO.py  I2C.py  __init__.py  abc.py  onewire.py  virtual.py  websocket.py
src/gaia/hardware/sensors/_devices/: _compatibility.py  gaia_bs18b20.py  gaia_ds18b20.py  virtual.py
src/gaia/subroutines/: __init__.py  actuator_handler.py  chaos.py  climate.py  dummy.py  health.py  light.py  pictures.py  sensors.py  template.py  weather.py
src/hardware/: ABC.py  GPIO_sensors.py  I2C_sensors.py  __init__.py  _compatibility.py  actuators.py  base.py  camera.py  compatibility.py  multiplexers.py  physical_sensors.py  random_measures.py  rdm_measures.py  sensors.py  store.py  virtual_sensors.py
src/subroutines/: __init__.py  chaos.py  climate.py  health.py  light.py  sensors.py  template.py
tests/: __init__.py  conftest.py  data.py  dummy_subroutine.py  test_0_fixtures.py  test_actuator_handler.py  test_config.py  test_database.py  test_ecosystem.py  test_engine.py  test_gaia.py  test_hardware.py  test_helpers.py  test_hysterical_PID.py  test_main.py  test_relationship.py  test_scripts.py  test_virtual.py  utils.py
tests/events/: conftest.py  crud.py  test_crud.py  test_events.py
tests/subroutines/: conftest.py  dummy_subroutine.py  test_climate.py  test_health.py  test_light.py  test_pictures.py  test_sensors.py  test_template.py  test_weather.py
