[project]
name = "gaia"
description = "An app to manage greenhouses, terrariums and aquariums"
authors = [
    {name = "Valentin Ambroise", email = "valentin.ambroise@outlook.com"}
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "adafruit-blinka~=8.20.0",
    "apscheduler~=3.7.0",
    "cryptography~=35.0.0",
    "eventlet~=0.33.0",
    "orjson~=3.8.0",
    "pydantic~=2.0.2",
    "requests~=2.25.1",
    "ruamel.yaml~=0.17.21",
    "simple_pid~=1.0.1",
    "setproctitle~=1.3.1",
    "SQLAlchemy~=2.0.0",

    # From git
    "gaia-validators @ git+https://github.com/vaamb/gaia-validators.git",
    "sqlalchemy-wrapper @ git+https://github.com/vaamb/sqlalchemy-wrapper.git",
]

[project.optional-dependencies]
camera = [
    "numpy~=1.25.0",
    "Pillow~=9.5.0",
]
dispatcher = [
    "kombu~=5.3.1",
    "event-dispatcher @ git+https://github.com/vaamb/event-dispatcher.git",
]
test = [
    "pytest~=7.1.2"
]

[project.urls]
repository  = "https://github.com/vaamb/gaia.git"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "gaia.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
