[project]
name = "gaia"
description = "An app to manage greenhouses, terrariums and aquariums"
authors = [
    {name = "Valentin Ambroise", email = "valentin.ambroise@outlook.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "adafruit-blinka~=8.20",
    "alembic~=1.16",
    "anyio~=4.4",
    "apscheduler~=3.10.0",
    "click~=8.1.7",
    "cryptography~=40.0",
    "orjson~=3.8",
    "pydantic~=2.4",
    "ruamel.yaml~=0.17",
    "setproctitle~=1.3.1",
    "uvloop~=0.21.0",

    # From git
    "gaia-validators @ git+https://github.com/vaamb/gaia-validators.git@0.9.0",
]

[project.optional-dependencies]
camera = [
    "numpy~=2.1",
    "opencv-python~=4.10",
]
database = [
    "aiosqlite~=0.20.0",
    "SQLAlchemy~=2.0.5",
    "sqlalchemy-wrapper @ git+https://github.com/vaamb/sqlalchemy-wrapper.git@0.4.0",
]
dispatcher = [
    "aiohttp~=3.11",
    "aio-pika~=9.0",
    "event-dispatcher @ git+https://github.com/vaamb/event-dispatcher.git@0.6.1",
]
test = [
    "coverage~=7.6",
    "pytest~=9.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-timeout~=2.2.0",
    "ruff~=0.7",
]

[project.urls]
repository  = "https://github.com/vaamb/gaia.git"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "gaia.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = ["E402", "F401"]
